# models-playing-tetris

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  bounty_details.md  common.py  game.py  game_agent_comms.py  gemini_side.py  gui.py  image_transformation.py  main.py  models.py  pyproject.toml  rate_the_board.py  requirements.txt  tetromino.py  video_creation.py
ai_interaction/: game_archive_manager.py  model_manager.py  models.py  rate_the_board.py
assets/: examples.json  prompts.json
lib/: cli.py  cognitive_analysis.py  color.py  game_agent_comms.py  games_analysis.py  image_transformation.py  json_utils.py  video_creation.py
model_controller/: game_archive_manager.py  models.py  run_model.py
tetris/: common.py  game.py  gui.py  tetromino.py
tetris/lib/: color.py
